--- a/src/lib/style.css
+++ b/src/lib/style.css
@@ -22,7 +22,7 @@
 .range-slider .range-slider__thumb {
   position: absolute;
   z-index: 3;
-  top: 50%;
+  inset-block-start: 50%;
   width: 24px;
   height: 24px;
   transform: translate(-50%, -50%);
@@ -34,7 +34,7 @@
   box-shadow: 0 0 0 6px rgba(33, 150, 243, 0.5);
 }
 .range-slider[data-vertical] .range-slider__thumb {
-  left: 50%;
+inset-inline-start: 50%;
 }
 .range-slider .range-slider__thumb[data-disabled] {
   z-index: 2;
@@ -43,13 +43,13 @@
   position: absolute;
   z-index: 1;
   transform: translate(0, -50%);
-  top: 50%;
+  inset-block-start: 50%;
   width: 100%;
   height: 100%;
   background: #51adf6;
 }
 .range-slider[data-vertical] .range-slider__range {
-  left: 50%;
+  inset-inline-start: 50%;
   transform: translate(-50%, 0);
 }
 .range-slider input[type="range"] {
@@ -57,8 +57,8 @@
   pointer-events: none;
   position: absolute;
   z-index: 2;
-  top: 0;
-  left: 0;
+  inset-block-start: 0;
+  inset-inline-start: 0;
   width: 0;
   height: 0;
   background-color: transparent;
